[package]
name = "system-designer-rs"
version = "0.1.0"
edition = "2021"
description = "A puzzle game that combines system design and programming."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_prototype_lyon = "0.8.0"
bevy_egui = "0.20"
bevy_mod_picking = { version = "0.13.0", features = [
  "backend_egui",
  "backend_raycast",
  "selection",
  "highlight",
], default-features = false }
strum = { version = "0.25", features = ["derive"] }
boa_engine = "0.16.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
bevy_common_assets = { version = "0.6", features = ["ron"] }
egui-modal = "=0.2.3"

[dependencies.uuid]
version = "1.4.0"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
